name:                asteroid
version:             0.1.0.0
synopsis:            a asteroids game
description:         my asteroids game
author:              Joel H
maintainer:          Joel H
copyright:           2019 Joel H
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable asteroid
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss
