name:                chess
version:             0.1.0.0
synopsis:	     A simple chess game
description:         My chess
author:              Joel Helkala
maintainer:          joel.helkala@gmail.com
copyright:           2019 Joel Helkala
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
